# inputstream.ffmpegdirect

./: .gitignore  .travis.yml  CMakeLists.txt  FindBZip2.cmake  FindFFMPEG.cmake  FindIconv.cmake  FindPThreads.cmake  Jenkinsfile  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/android/gmp/: CMakeLists.txt  gmp.sha256  gmp.txt
depends/android/iconv/: CMakeLists.txt  iconv.txt
depends/android/libiconv/: CMakeLists.txt  libiconv.sha256  libiconv.txt
depends/android/libzvbi/: 01-zvbi-fix-clang-support.patch  04-prevent-test.patch  05-zvbi-ios-without-settime.patch  06-zvbi-fix-static-linking.patch  08-zvbi-android-pthread_testcancel.patch  09-zvbi-android-memfunc-errors.patch  CMakeLists.txt  deps.txt  libzvbi.txt
depends/android/zvbi/: 05-zvbi-android-pthread_testcancel.patch  CMakeLists.txt  zvbi.sha256
depends/common/bz2/: CMakeLists.txt  bz2.txt
depends/common/bzip2/: CMakeLists.txt  PostInstall.cmake  bzip.sha256  bzip2.txt
depends/common/ffmpeg/: 0001-hack-fix.patch  0004-ffmpeg-linux-fix-asm-binutil-since-2.41.patch  0004-ffmpeg-tvos-disable-hw-accel-interlaced-video.patch  01-ffmpeg-detect-openssl-windows.patch  01-fix-build-test-with-this-as-static-on-ffmpeg.patch  02-ffmpeg-zlib-config-conflict-windows.patch  03-ffmpeg-static-windows.patch  04-Fixes-assembling-w-binutil-as-2.41.patch  04-eit-mpegts-temp.patch  04-ffmpeg-ssl-support-both-pre-1.1.0-and-post-1.1.0-init-windows.patch  04-fix-build-aarch64.patch  04-satip-improvements.patch  05-ffmpeg-dont-use-libcrypto-locking-functions-windows.patch  05-ssl-support-both-pre-1.1.0-and-post-1.1.0-init.patch  06-dont-use-libcrypto-locking-functions.patch  06-ffmpeg-rtp-sources-missing.patch  07-ffmpeg-detect-openssl.patch  07-ffmpeg-w32pthreads.patch  CMakeLists.txt  ConfigureEnvWrapper.cmake  FindGnuTls.cmake  deps.txt  ffmpeg.sha256  ffmpeg.txt  readme  windows-deps.txt  windowsstore-deps.txt
depends/common/gas-preprocessor/: 01-fix-vs-use.patch  CMakeLists.txt  gas-preprocessor.sha256  gas-preprocessor.txt
depends/common/gmp/: CMakeLists.txt  gmp.pc  gmp.sha256  gmp.txt
depends/common/gnutls/: 0001-android-hackfix-fpending_c.patch  0002-hack-fix-about-rsa_compute_root_tr.patch  01-size-max.patch  02-include-libdl-if-available.patch  02-patch-out-connectx-for-osx-as-less-than-10.11.patch  03-fix-build-test-with-this-as-static-on-ffmpeg.patch  03-include-libdl-if-available.patch  CMakeLists.txt  deps.txt  gnutls.sha256  gnutls.txt
depends/common/iconv/: 0001-patch-utf8mac.patch  0002-src-Makefile.in-darwin.patch  CMakeLists.txt  iconv.sha256  iconv.txt  platforms.txt
depends/common/libpng/: 0001-disable-neon-arm-apple.patch  0001-fix-compile-if-libm-not-found.patch  0002-fix-cmake-install.patch  01-make-private-public-for-static-on-libpng.pc.in.patch  flags.txt  libpng.sha256  libpng.txt
depends/common/libxml2/: 0001-check-about-readline-lib-also-presence-of-header.patch  0002-disable-docs.patch  0003-fix_cmakelist.patch  01-macosx-weak-import.patch  02-fix-build-test-with-this-as-static-on-ffmpeg.patch  CMakeLists.txt  deps.txt  flags.txt  libxml2.sha256  libxml2.txt  windows-deps.txt
depends/common/libzvbi/: 0001-zvbi-ssize_max.patch  0003-zvbi-fix-static-linking.patch  0005-prevent-test.patch  0006-zvbi-android.patch  0007-zvbi-android-pthread_testcancel.patch  0008-fix-missing-malloc.patch  0009-fix-building-libzvbi-version-0.2.41-on-debian-bullse.patch  0009-fix-building-libzvbi-version-0.2.42-on-debian-bullse.patch  05-zvbi-ios-without-settime.patch  07-fix-nl_langinfo-as-them-not-available-on-older-Andro.patch  08-zvbi-android-pthread_testcancel.patch  CMakeLists.txt  libzvbi.sha256  libzvbi.txt
depends/common/nettle/: 02-conftest_exit.patch  CMakeLists.txt  nettle.sha256  nettle.txt  platforms.txt
depends/common/xz-utils/: 0001-fix-uwp-build.patch  CMakeLists.txt  flags.txt  xz-utils.sha256  xz-utils.txt
depends/common/zlib/: 01-build-static.patch  02-install-pkgconfig-in-lib.patch  flags.txt  zlib.sha256  zlib.txt
depends/common/zvbi/: 05-have-libm-on-end.patch  06-zvbi-ios-without-settime.patch  07-zvbi-libm-on-end-configure.patch  CMakeLists.txt
depends/darwin_embedded/libpng/: flags.txt
depends/darwin_embedded/zvbi/: CMakeLists.txt  zvbi-ios-remove-settime.patch  zvbi.txt
depends/windows/iconv/: 01-Win-UWP-fix.patch  iconv.txt
depends/windows/librtmp/: 0002-fix-uwp.patch
depends/windows/libxml2/: 01-win32_io.patch  02-fix-uwp-api.patch  CMakeLists.txt  libxml2.txt
depends/windows/mingw/: 02-caller.sh.patch  03-use-curl.patch  03-usecurl.patch  CMakeLists.txt  mingw.sha256  mingw.txt
depends/windows/openssl/: 01-openssl.patch  CMakeLists.txt  openssl.sha256  openssl.txt
depends/windows/pthreads/: 01-fix-ARM-build.patch  CMakeLists.txt  pthreads.sha256  pthreads.txt
depends/windows/strawberryperl/: strawberryperl.sha256  strawberryperl.txt
depends/windowsstore/iconv/: flags.txt  iconv.sha256
depends/windowsstore/librtmp/: 0001-windows.patch  CMakeLists.txt  librtmp.sha256  librtmp.txt
depends/windowsstore/libxml2/: 01-win32_io.patch  02-fix-uwp-api.patch  CMakeLists.txt  libxml2.txt
depends/windowsstore/mingw/: 01-MinGWConfig.cmake.in.patch  03-use-curl.patch  CMakeLists.txt  mingw.txt
inputstream.ffmpegdirect/: addon.xml.in  changelog.txt
inputstream.ffmpegdirect/resources/: settings.xml
inputstream.ffmpegdirect/resources/lib/: runner.py
src/: StreamManager.cpp  StreamManager.h
src/stream/: BaseStream.h  CurlCatchupInput.cpp  CurlCatchupInput.h  CurlInput.cpp  CurlInput.h  DemuxStream.cpp  DemuxStream.h  FFmpegCatchupStream.cpp  FFmpegCatchupStream.h  FFmpegLog.cpp  FFmpegLog.h  FFmpegStream.cpp  FFmpegStream.h  IManageDemuxPacket.h  TimeshiftBuffer.cpp  TimeshiftBuffer.h  TimeshiftSegment.cpp  TimeshiftSegment.h  TimeshiftStream.cpp  TimeshiftStream.h
src/stream/url/: URL.cpp  (+5 more)
src/utils/: DiskUtils.cpp  DiskUtils.h  FFmpegCompat.h  FilenameUtils.cpp  FilenameUtils.h  HttpProxy.h  Log.h  Properties.h
(+110 files in other folders)
